<resources>
    <string name="app_name">PraAsessment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_6706184042">6706184042</string>
    <string name="d3if_42_04">D3IF-42-04</string>
    <string name="said_samaludin">Said Samaludin</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="segitiga_siku_siku">Segitiga Siku-Siku</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="keliling">Keliling</string>
    <string name="share">Share</string>
    <string name="_0">0</string>
    <string name="hitung">Hitung</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>
    <string name="luas">Luas</string>
    <string name="shared">panjang = %1$d lebar = %2$d Luas = %3$d Keliling = %4$d</string>


</resources>
