<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".PersegiPanjangFragment">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/panjang"
                android:ems="10"
                android:id="@+id/ptPanjang" android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/lebar"
                android:ems="10"
                android:id="@+id/ptLebar"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/ptPanjang"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/keliling"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvKeliling" android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="72dp"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/tvLuas"/>
        <TextView
                android:text="@string/luas"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLuas"
                android:textSize="36sp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="72dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/btnHitungP"/>
        <Button
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnShare"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.498"
                android:layout_marginTop="208dp" app:layout_constraintTop_toBottomOf="@+id/btnHitungP"/>
        <TextView
                android:text="@string/_0"
                android:layout_width="72dp"
                android:layout_height="50dp"
                android:textSize="36sp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tvNolLuas"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvKeliling"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.358"
                android:id="@+id/tvNolKel"/>
        <TextView
                android:text="@string/_0"
                android:layout_width="72dp"
                android:textAlignment="center"
                android:layout_height="50dp"
                android:id="@+id/tvNolLuas"
                android:textSize="36sp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvLuas"
                android:layout_marginStart="8dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/btnHitungP" app:layout_constraintHorizontal_bias="0.525"/>
        <Button
                android:text="@string/hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnHitungP" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/ptLebar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>