<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".SegitigaFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <!-- TODO: Update blank fragment layout -->


            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/alas"
                    android:ems="10"
                    android:id="@+id/ptalas" android:layout_marginTop="40dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/tinggi"
                    android:ems="10"
                    android:id="@+id/pttinggi" android:layout_marginTop="48dp"
                    app:layout_constraintTop_toBottomOf="@+id/ptalas" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <Button
                    android:text="@string/hitung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnHitungS" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/pttinggi" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/keliling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvKelS" android:textSize="36sp"
                    android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/tvLuasS"
                    android:layout_marginStart="84dp" app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:layout_width="82dp"
                    android:layout_height="70dp"
                    android:id="@+id/tvNolLuasS" android:textSize="36sp"
                    android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/btnHitungS"
                    app:layout_constraintStart_toEndOf="@+id/tvLuasS" android:layout_marginStart="92dp"/>
            <TextView
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:id="@+id/tvNolKelS" android:textSize="36sp" app:layout_constraintStart_toEndOf="@+id/tvKelS"
                    android:layout_marginStart="60dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvNolLuasS"/>
            <TextView
                    android:text="@string/luas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLuasS" android:textSize="36sp"
                    android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/btnHitungS"
                    android:layout_marginStart="84dp" app:layout_constraintStart_toStartOf="parent"/>
            <Button
                    android:text="share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSharedS" android:layout_marginTop="44dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvKelS" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>