<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".AboutFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->


        <TextView
                android:text="@string/said_samaludin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:textSize="36sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        <TextView
                android:text="@string/d3if_42_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" android:textSize="36sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <TextView
                android:text="@string/_6706184042"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:textSize="36sp"
                android:layout_marginTop="96dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>